k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digital-passport
  labels:
    name: digital-passport
    app.kubernetes.io/name: digital-passport-viewer
    app.kubernetes.io/component: namespace
